# eunomia

./: .env.example  .gitignore  404.html  Dockerfile  FETCHERS_TESTS_SUMMARY.md  README.md  db.sqlite  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: cd.yml  ci.yml
api/: index.html
api/core/: index.html
api/extensions/: index.html
api/instruments/: index.html
api/main/: index.html
api/orchestra/: index.html
api/sdks/: index.html
community/: index.html
community/contribute/: index.html
community/license/: index.html
cookbook/: index.html
cookbook/pii_tutorial/: index.html
docs/api/: apis.md  index.md  orchestra.md
docs/community/: contribute.md  index.md  license.md
docs/cookbook/: index.md  pii_tutorial.md
docs/get_started/: how_it_works.md  index.md  installation.md  integrations.md  quickstart.md
docs/integrations/: index.md  mcp.md
docs/mcp_middleware/: advanced.md  authentication.md  index.md  monitoring.md  policies.md  quickstart.md
docs/overrides/: home.html
docs/sdks/: index.md  langchain.md  python.md
docs/server/: apis.md  config.md  db.md  engine.md  index.md  installation.md  quickstart.md  server.md
docs/stylesheets/: extra.css
docs/user_guide/: check_access.md  configure_server.md  create_policies.md  index.md  register_entities.md  upd_del_entities.md
eunomia/: config.py  instrument.py  main.py  orchestra.py  server.py
eunomia/api/: main.py  routers.py
eunomia/db/: crud.py  models.py  schemas.py
eunomia/engine/: opa.py
eunomia/instruments/: __init__.py  financials_instrument.py  idbac_instrument.py  pii_instrument.py  rbac_instrument.py  sql_instrument.py
eunomia/server/: .env_template  README_server.md  config.py  logic.py  main.py  rego.py
eunomia/utils/: enums.py
examples/: basic_pii.py  financial_ner.py  id_based_pii.py  role_based_pii.py  sql_queries.py
examples/authorized_rag/: README.md  allow_category.rego  example_authorized_rag.py  requirements.txt
examples/cloudflare_remote_mcp/: README.md  allow_tool.rego  index.ts
examples/langchain_rag/: allow_query.rego  example_langchain_rag.py  requirements.txt
examples/mcp_planetary_weather/: README.md  mcp_policies.json  planetary_weather.py  requirements.txt
examples/mcp_whatsapp/: README.md  main.py  (+2 more)
get_started/: index.html
integrations/: index.html
mcp_middleware/: index.html
sdks/: index.html
sdks/langchain/: README.md  index.html  pyproject.toml
sdks/langchain/src/: document_loader.py
sdks/langchain/src/eunomia_sdk_langchain/: __init__.py  document_loader.py
search/: search_index.json
server/: index.html
stylesheets/: extra.css
tests/: conftest.py  test_orchestra.py  test_placeholder.py
(+277 files in other folders)
