[project]
name = "eunomia-ai"
version = "0.2.0"
description = "Authorization layer for AI Agents"
authors = [
    { name="What About You team", email="info@whataboutyou.ai" }
]
maintainers = [
    { name="Tommaso Tassi", email="ttassi@whataboutyou.ai" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "pytest>=8.3.4",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.5",
]
