[project]
name = "eunomia-ai"
version = "0.2.0"
description = "Authorization layer for AI Agents"
authors = [
    { name="What About You team", email="info@whataboutyou.ai" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.9",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.0",
    "pytest>=8.3.4",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.5",
    "mkdocstrings[python]>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eunomia"]

[tool.uv.workspace]
members = ["sdks/*"]
